등록 길찾기 완료

--- a/registration.html
+++ b/registration.html
@@ -30,9 +30,204 @@
   <script src="./assets/js/bootstrap-datepicker.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.ko.min.js"></script>
   
+  <!--Tmap API 사용-->
+  <script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=l7xx34fbc458caac49f6b3fd63b8e1dcadd5"></script>
+  <script type="text/javascript">
+    var map;
+    var s_x; // 시작 x 값
+    var s_y; // 시작 y 값
+    var e_x; // 도착 x 값
+    var e_y; // 도착 y 값
+    //위치 표시를 위함 마커
+    var marker_s; //시작지 마커
+    var marker_e; //도착지 마커
+    var drawInfoArr = [];
+    var resultdrawArr = [];
+    var markerArr_s = []; //출발지 검색된 값 
+    var markerArr_e = []; //도착지 검색된 값 
+    function initTmap() {
+      //기본 지도 설정
+      map = new Tmapv2.Map("map", {
+        center: new Tmapv2.LatLng(37.49241689559544, 127.03171389453507),
+        width: "100%",
+        height: "300px",
+        zoom: 13,
+        zoomControl: false,
+        scrollwheel: true
+      });
+      $("#input").click(function () {
+      var search_s = $('#start').val();
+      var search_e = $('#end').val();
+      resettingMap();
+      //시작 점 검색
+      $.ajax({
+        method: "GET",
+        url: "https://apis.openapi.sk.com/tmap/pois?version=1&format=json&callback=result",
+        async: false,
+        data: {
+          "appKey": "l7xx34fbc458caac49f6b3fd63b8e1dcadd5",
+          "searchKeyword": search_s,
+          "resCoordType": "EPSG3857",
+          "reqCoordType": "WGS84GEO",
+          "count": 1
+        },
+        success: function (response) {
+          var resultpoisData = response.searchPoiInfo.pois.poi;
+
+          var positionBounds = new Tmapv2.LatLngBounds();	//맵에 결과물 확인 하기 위한 LatLngBounds객체 생성    
+          var noorLat = Number(resultpoisData[0].noorLat); // 좌표의 경도
+          var noorLon = Number(resultpoisData[0].noorLon); // 좌표의 위도
+          var name = resultpoisData[0].name; //좌표의 실제 명칭
+
+          var pointCng = new Tmapv2.Point(noorLon, noorLat);
+          var projectionCng = new Tmapv2.Projection.convertEPSG3857ToWGS84GEO(pointCng);
+
+          var lat = projectionCng._lat;
+          var lon = projectionCng._lng;
+          s_x = lon;
+          s_y = lat;
+          var markerPosition = new Tmapv2.LatLng(lat, lon);
+          //시작 마커
+          marker_s = new Tmapv2.Marker({
+            position: markerPosition,
+            icon: "http://tmapapi.sktelecom.com/upload/tmap/marker/pin_b_m_s.png",
+            iconSize: new Tmapv2.Size(24, 38),
+            title: name, //주소이름
+            map: map
+          });
+          document.getElementById("start").value = name;
+          markerArr_s.push(marker_s); //마커를 누르면 상세 주소
+          map.setCenter(markerPosition);
+        },
+        error: function (request, status, error) {
+          console.log("code:" + request.status + "\n" + "message:" + request.responseText + "\n" + "error:" + error);
+        }
+      }); //출발지 마커 찍기 끝
+      //도착지 검색
+      $.ajax({
+        method: "GET",
+        url: "https://apis.openapi.sk.com/tmap/pois?version=1&format=json&callback=result",
+        async: false,
+        data: {
+          "appKey": "l7xx34fbc458caac49f6b3fd63b8e1dcadd5",
+          "searchKeyword": search_e,
+          "resCoordType": "EPSG3857",
+          "reqCoordType": "WGS84GEO",
+          "count": 1
+        },
+        success: function (response) {
+
+          var resultpoisData = response.searchPoiInfo.pois.poi;
+
+          var positionBounds = new Tmapv2.LatLngBounds();		//맵에 결과물 확인 하기 위한 LatLngBounds객체 생성     
+          var noorLat = Number(resultpoisData[0].noorLat); //좌표의 경도
+          var noorLon = Number(resultpoisData[0].noorLon); //좌표의 위도
+          var name = resultpoisData[0].name; // 좌표의 실제 명칭
+
+          var pointCng = new Tmapv2.Point(noorLon, noorLat);
+          var projectionCng = new Tmapv2.Projection.convertEPSG3857ToWGS84GEO(pointCng);
+
+          var lat = projectionCng._lat;
+          var lon = projectionCng._lng;
+          e_x = lon;
+          e_y = lat;
+          var markerPosition = new Tmapv2.LatLng(lat, lon);
+          //도착 마커
+          marker_e = new Tmapv2.Marker({
+            position: markerPosition,
+            icon: "http://tmapapi.sktelecom.com/upload/tmap/marker/pin_b_m_e.png",
+            iconSize: new Tmapv2.Size(24, 38),
+            title: name, //주소 이름
+            map: map
+          });
+          document.getElementById("end").value = name;
+          markerArr_e.push(marker_e); //마커를 누르면 상세 주소
+
+        },
+        error: function (request, status, error) {
+          console.log("code:" + request.status + "\n" + "message:" + request.responseText + "\n" + "error:" + error);
+        }
+      });// 도착지 마커 찍기 끝
+      //경로 표시하기
+      $.ajax({
+        type: "POST",
+        url: "https://apis.openapi.sk.com/tmap/routes?version=1&format=json&callback=result",
+        async: false,
+        data: {
+          "appKey": "l7xx34fbc458caac49f6b3fd63b8e1dcadd5",
+          "startX": s_x,
+          "startY": s_y,
+          "endX": e_x,
+          "endY": e_y,
+          "reqCoordType": "WGS84GEO",
+          "resCoordType": "EPSG3857",
+        },
+        success: function (response) {
+          var resultData = response.features;
+
+          var num = document.getElementById("num").value;
+          document.getElementById("price").value = resultData[0].properties.taxiFare/num + "원";
+
+          for (var i in resultData) { //for문 [S]
+            var geometry = resultData[i].geometry;
+            var properties = resultData[i].properties;
+
+            if (geometry.type == "LineString") {
+              for (var j in geometry.coordinates) {
+                // 경로들의 결과값들을 포인트 객체로 변환 
+                var latlng = new Tmapv2.Point(
+                  geometry.coordinates[j][0],
+                  geometry.coordinates[j][1]);
+                // 포인트 객체를 받아 좌표값으로 변환
+                var convertPoint = new Tmapv2.Projection.convertEPSG3857ToWGS84GEO(
+                  latlng);
+                // 포인트객체의 정보로 좌표값 변환 객체로 저장
+                var convertChange = new Tmapv2.LatLng(convertPoint._lat, convertPoint._lng);
+                // 배열에 담기
+                drawInfoArr.push(convertChange);
+              }//for문 끝
+              drawLine(drawInfoArr);
+            }
+          }
+        } //키 인증 성공
+      }); //ajex끝
+    })} //출발지, 도착지버튼 클릭 끝
+    //라인그리기
+    function drawLine(arrPoint) {
+      var polyline_;
+
+      var lineColor = "";
+      polyline_ = new Tmapv2.Polyline({
+        path: arrPoint,
+        strokeColor: "#DD0000",
+        strokeWeight: 6,
+        map: map
+      });
+      resultdrawArr.push(polyline_);
+    }
+
+    //초기화 기능
+    function resettingMap() {
+      //기존마커는 삭제
+      if (markerArr_s.length > 0) {
+        markerArr_s[0].setMap(null);
+
+      }
+      if (markerArr_e.length > 0) {
+        markerArr_e[0].setMap(null);
+      }
+      if (resultdrawArr.length > 0) {
+        for (var i = 0; i < resultdrawArr.length; i++) {
+          resultdrawArr[i].setMap(null);
+        }
+      }
+      drawInfoArr = [];
+      resultdrawArr = [];
+    }
+  </script>
 </head>
 
-<body class="registration bg-gray-200">
+<body onload="initTmap();" class="registration bg-gray-200">
  
   <!-- Navbar Transparent -->
   <nav class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-none my-3  navbar-transparent ">
@@ -95,19 +290,20 @@
               <hr width="100%" color="#B2B2B2" noshade />
             </div>
             <div class="col-lg-8 col-md-8 mt-4 px-md-2 px-sm-5 mx-auto">
-              <form class="justify-content-center my-sm-5 align-items-center mt-4">
+              <div id="map"></div>
+              <form class="justify-content-center my-sm-5 align-items-center mt-4" onsubmit="return false">
                 출발지 <input class="form-control border p-2 mt-1 mb-3" id="start" type="search" placeholder="출발지">
                 도착지 <input class="form-control border p-2 mt-1 mb-3" id="end" type="search" placeholder="도착지">
                 <div class="row">
                   <div class="col-lg-6 col-md-6">
                     인원수
                     <div class="d-flex justify-content-center">
-                      <input type="number" class="form-control border p-2 mt-1 mb-3 me-2" min="2" max="4" placeholder="2 ~ 4" >
+                      <input type="number" name="wr_1" id="num" class="form-control border p-2 mt-1 mb-3 me-2" min="2" max="4" placeholder="2 ~ 4" >
                       <button class="btn btn-outline-success mt-1 mb-3" type="button" id="input" style="width:7rem;height:42px">조회</button>
                     </div>
                   </div>
                   <div class="col-lg-6 col-md-6">
-                    예상가격<input class="form-control-plaintext p-2 mt-1 mb-3" placeholder="조회 클릭시 확인 가능" readonly>
+                    예상가격<input id="price" class="form-control-plaintext p-2 mt-1 mb-3" placeholder="조회 클릭시 확인 가능" readonly>
                   </div>
                 </div>
                 <div class="row">
@@ -139,10 +335,26 @@
   <!--  Plugin for Parallax, full documentation here: https://github.com/wagerfield/parallax  -->
   <script src="./assets/js/plugins/parallax.min.js"></script>
   <!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
-  <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
-  <script src="./assets/js/material-kit.min.js?v=3.0.2" type="text/javascript"></script>
+  <!--  Google Maps Plugin   
+  <script src="./assets/js/material-kit.min.js?v=3.0.2" type="text/javascript"></script>-->
   </body>
+
+  <script>
+    $(document).on("keyup", "input[name^=wr_1]", function() {
+        var val= $(this).val();
+    
+        if(val.replace(/[0-9]/g, "").length > 0) {
+            alert("숫자만 입력해 주십시오.");
+            $(this).val('');
+        }
+    
+        if(val < 2 || val > 4) {
+            alert("2~4 범위로 입력해 주십시오.");
+            $(this).val('');
+        }
+    });
+    </script>
 
   <script>
     $('#datePicker')
