--- a/detail-info.html
+++ b/detail-info.html
@@ -24,10 +24,25 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
   
-  
+  <!-- Tmap API -->
+  <script src="tmap.js"></script>
+  <script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=l7xx34fbc458caac49f6b3fd63b8e1dcadd5"></script>
+  <script type="text/javascript">
+    function initTmap() {
+      //기본 지도 설정
+      map = new Tmapv2.Map("map", {
+        center: new Tmapv2.LatLng(37.49241689559544, 127.03171389453507),
+        width: "47%",
+        height: "450px",
+        zoom: 13,
+        zoomControl: false,
+        scrollwheel: true
+      });
+    }
+  </script>
 </head>
 
-<body class="detail-info bg-gray-200">
+<body onload="initTmap();" class="detail-info bg-gray-200">
   <!-- Navbar Transparent -->
   <nav class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-none my-3  navbar-transparent ">
     <div class="container">
@@ -86,11 +101,9 @@
           <div class="mt-4 z-index-2 position-relative px-md-2 px-sm-5 mx-auto">
             <div class="row mx-auto">
                 <!--지도 넣을 부분-->
-                <div class="col-md-5 mb-3">
-                     지도
-                </div>
+                <div id="map" class="col-md-6 mb-3" style="margin-right: 6px;"></div>
                 <!--설명 나와야 하는 부분-->
-                <div class="col-md-7 mb-3">
+                <div class="col-md-6 mb-3">
                     <form class="position-relative align-items-center">
                         <!--해당 글을 작성한 사람의 이름을 동적으로 가져오기-->
                         <h5 class="mb-4">사용자명</h5>
@@ -122,8 +135,8 @@
   <!--  Plugin for Parallax, full documentation here: https://github.com/wagerfield/parallax  -->
   <script src="./assets/js/plugins/parallax.min.js"></script>
   <!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
-  <!--  Google Maps Plugin    -->
+  <!--  Google Maps Plugin    
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
-  <script src="./assets/js/material-kit.min.js?v=3.0.2" type="text/javascript"></script>
+  <script src="./assets/js/material-kit.min.js?v=3.0.2" type="text/javascript"></script>-->
   </body>
 </html>
